[package]
name = "relation-graph"
version = "0.1.0"
edition = "2021"
description = "Unified Knowledge Graph Service - Neo4j + Vector hybrid engine for code and documentation"
authors = ["ConHub Team"]

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "tls-rustls"] }
neo4rs = "0.8"

# Vector Database (Zilliz/Milvus compatible)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
dotenvy = "0.15"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Text processing
regex = "1"
lazy_static = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Hashing
md5 = "0.7"

[[bin]]
name = "relation-graph"
path = "src/main.rs"
